{
  "version": 4,
  "terraform_version": "0.14.7",
  "serial": 53,
  "lineage": "9c07471b-d96a-691e-1e86-ff810c74c2c3",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d758c1134823146a",
            "arn": "arn:aws:ec2:ap-south-1:490151894787:instance/i-00ea202ccb12a0b35",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00ea202ccb12a0b35",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terrform-demo",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0eb328255b925e721",
            "private_dns": "ip-172-31-45-104.ap-south-1.compute.internal",
            "private_ip": "172.31.45.104",
            "public_dns": "ec2-52-66-208-96.ap-south-1.compute.amazonaws.com",
            "public_ip": "52.66.208.96",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-016b8145f9d5b8752",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "all-outbound-traffic-group",
              "http-access-group",
              "ssh-access-group"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-d025c0bb",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-039a92667010bc0c0",
              "sg-0c7fe62b22606d9be",
              "sg-0e0735287aef15901"
            ]
          },
          "dependencies": [
            "aws_security_group.all-outbound-traffic",
            "aws_security_group.http-group",
            "aws_security_group.ssh-group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "all-outbound-traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:490151894787:security-group/sg-0e0735287aef15901",
            "description": "Allow traffic to leave the AWS instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e0735287aef15901",
            "ingress": [],
            "name": "all-outbound-traffic-group",
            "name_prefix": null,
            "owner_id": "490151894787",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Outbound Traffic Security Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-7e679b15"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "http-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:490151894787:security-group/sg-039a92667010bc0c0",
            "description": "Allow traffic on port 80 (HTTP)",
            "egress": [],
            "id": "sg-039a92667010bc0c0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "http-access-group",
            "name_prefix": null,
            "owner_id": "490151894787",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "HTTP Inbound Traffic Security Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-7e679b15"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:490151894787:security-group/sg-0c7fe62b22606d9be",
            "description": "Allow traffic to port 22 (SSH)",
            "egress": [],
            "id": "sg-0c7fe62b22606d9be",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ssh-access-group",
            "name_prefix": null,
            "owner_id": "490151894787",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SSH Access Security Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-7e679b15"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}